tests/e2e/semantics/obj_index_float_boolean.error
Error: syntax error in story at line 2, column 5

2|    b = a[true]
          ^^^^^^

E0104: `Map[float,int]` can't be indexed with `true` of type `boolean`
