tests/e2e/semantics/obj_index_float_boolean.story
a = {1.5: 2}
b = a[true]
